--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "dmstr/yii2-adminlte-asset": "^2.1"
+        "dmstr/yii2-adminlte-asset": "^2.1",
+        "yiisoft/yii2-bootstrap4": "^2.0",
+        "fortawesome/font-awesome": "^5.12.1" 
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
